# python-project-52

./: .env.example  .env_example  .flake8  .gitignore  MIGRATION_FIX.md  Makefile  README.md  backup.json  build.sh  conftest.py  db.sqlite  db.sqlite3  db_backup.json  manage.py  pyproject.toml  pytest.ini  render.yaml  ruff.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml  hexlet-check.yml  my_workflow.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: admin.py  asgi.py  forms.py  mixins.py  models.py  settings.py  test.py  tests.py  urls.py  views.py  wsgi.py
task_manager/auth/: forms.py  views.py
task_manager/fixtures/: data.json  labels.json  labels.yaml  statuses.json  statuses.yaml  tasks.json  tasks.yaml  test_labels.json  test_statuses.json  test_tasks.json  test_users.json  test_values.yaml  users.json  users.yaml
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json  test_labels.json
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_label.py  0002_alter_labels_name.py  0002_label.py  0003_alter_label_name.py  0003_delete_labels.py  0003_rename_label_label_name.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_urls.py  (+2 more)
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_delete_task.py  0004_add_labels_m2m.py
task_manager/status/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: admin.py  apps.py  consts.py  filter.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: auth_items.html  base.html  debug.html  delete.html  form.html  general_delete_form.html  general_form.html  header.html  home.html  index.html  layout.html  login.html  login_form.html  logout.html  not_auth_items.html  top_menu.html
task_manager/tests/: apps.py  settings_test.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_add_labels_m2m.py
tasks/tests/: test_filters.py  test_filterset.py  test_labels.py  test_models.py  test_views.py
templates/: base.html  login.html
tests/: conftest.py  test_10_session.py  test_labels.py  test_statuses.py  test_tasks.py  test_users.py
(+186 files in other folders)
